--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "gray-matter": "^4.0.3",
+    "marked": "^2.1.2",
+    "next": "11.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.40.0",
