--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gray-matter": "^4.0.3",
     "marked": "^2.1.2",
     "next": "11.0.1",
+    "nvm": "^0.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
